@@ -1,7 +1,7 @@
 #  File src/library/base/R/sort.R
 #  Part of the R package, https://www.R-project.org
 #
-#  Copyright (C) 1995-2018 The R Core Team
+#  Copyright (C) 1995-2019 The R Core Team
 #
 #  This program is free software; you can redistribute it and/or modify
 #  it under the terms of the GNU General Public License as published by
@@ -233,11 +233,10 @@ sort.list <- function(x, partial = NULL, na.last = TRUE, decreasing = FALSE,
     }
 
     method <- match.arg(method)
-    if (method == "auto" && (is.numeric(x) || is.factor(x) || is.logical(x)) &&
+    if (method == "auto" &&
+        (is.numeric(x) || is.factor(x) || is.logical(x) || is.object(x)) &&
         is.integer(length(x)))
         method <- "radix"
-    if(!is.atomic(x))
-        stop("'x' must be atomic for 'sort.list'\nHave you called 'sort' on a list?")
     if(!is.null(partial))
         .NotYetUsed("partial != NULL")
     if(method == "quick") {
@@ -255,6 +254,9 @@ sort.list <- function(x, partial = NULL, na.last = TRUE, decreasing = FALSE,
         return(order(x, na.last=na.last, decreasing=decreasing, method="radix"))
     }
     ## method == "shell"
+    if(!is.atomic(x))
+        stop("'x' must be atomic for 'sort.list', method \"shell\" and \"quick\"
+Have you called 'sort' on a list?")
     .Internal(order(na.last, decreasing, x))
 }
 
